Bug 1694844 - In nsPrinterListCUPS::SystemDefaultPrinterName return NS_OK even without working CUPS. r=emilio

The other nsPrinterListCUPS methods already handle !InitOkay() without returning an error or rejecting
the promise.

Differential Revision: https://phabricator.services.mozilla.com/D107210